--- a/thesis/Remerciements.lyx
+++ b/thesis/Remerciements.lyx
@@ -13,7 +13,7 @@ hanging
 initials
 \end_modules
 \maintain_unincluded_children false
-\language french
+\language english
 \language_package default
 \inputencoding auto
 \fontencoding global
@@ -69,8 +69,6 @@ initials
 \begin_body
 
 \begin_layout Chapter*
-
-\lang english
 Acknowledgment
 \end_layout
 
