--- a/thesis/Implementation.lyx
+++ b/thesis/Implementation.lyx
@@ -1114,6 +1114,10 @@ JSON output system
 \end_layout
 
 \begin_layout Subsection
+Linux Daemon
+\end_layout
+
+\begin_layout Subsection
 Django-Jquery web interface
 \end_layout
 
