--- a/thesis/Conception.lyx
+++ b/thesis/Conception.lyx
@@ -198,6 +198,18 @@ Previous Work
 [TODO]
 \end_layout
 
+\begin_layout Standard
+Quranic WordByWord as a resource to resolve lot of prblems
+\end_layout
+
+\begin_layout Standard
+http://en.wikipedia.org/wiki/Fuzzy_search
+\end_layout
+
+\begin_layout Standard
+http://en.wikipedia.org/wiki/Fuzzy_search
+\end_layout
+
 \begin_layout Section
 General Behavior
 \end_layout
