--- a/thesis/SA - Quran.lyx
+++ b/thesis/SA - Quran.lyx
@@ -160,6 +160,23 @@ BEST show for AYAS [+] , font me_quran or arabeyesQr
 
 \end_layout
 
+\begin_layout Standard
+
+\lang french
+\begin_inset Note Greyedout
+status open
+
+\begin_layout Plain Layout
+
+\lang french
+improve styles Quranic Ayates
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 Introduction 
 \end_layout
