--- a/thesis/styles/glossary_values.sty
+++ b/thesis/styles/glossary_values.sty
@@ -32,6 +32,7 @@
 \storeglosentry{nominative}{name={Nominative}, description={ \begin{Arabic} حالة\_الرفع   \end{Arabic}}}
 \storeglosentry{accusative}{name={Accusative}, description={ \begin{Arabic} حالة\_النصب  \end{Arabic}}}
 \storeglosentry{genitive}{name={Genitive}, description={ \begin{Arabic} حالة\_الجر  \end{Arabic}}}
+\storeglosentry{jussive}{name={Jussive}, description={ \begin{Arabic} حالة\_الجزم  \end{Arabic}}}
 \storeglosentry{conjugation}{name={Conjugation}, description={ \begin{Arabic}  تصريف\_الأفعال \end{Arabic}}}
 \storeglosentry{morphology}{name={Morphology}, description={ \begin{Arabic} الصرف \end{Arabic}}}
 \storeglosentry{declension}{name={Declension}, description={ \begin{Arabic}  الإعراب \end{Arabic}}}
@@ -42,8 +43,8 @@
 \storeglosentry{active participle}{name={Active Participle}, description={ \begin{Arabic} اسم\_الفاعل  \end{Arabic}}}
 \storeglosentry{passive participle}{name={Passive Participle}, description={ \begin{Arabic} اسم\_المفعول  \end{Arabic}}}
 \storeglosentry{dual form}{name={Dual form}, description={ \begin{Arabic} المثنّى \end{Arabic}}}
-\storeglosentry{singular}{name={Singular}, description={ \begin{Arabic} المفرد  \end{Arabic}}}
-\storeglosentry{plural}{name={Plural}, description={ \begin{Arabic} الجمع  \end{Arabic}}}
+\storeglosentry{singular}{name={Singular form}, description={ \begin{Arabic} المفرد  \end{Arabic}}}
+\storeglosentry{plural}{name={Plural form}, description={ \begin{Arabic} الجمع  \end{Arabic}}}
 \storeglosentry{external plural}{name={External plural}, description={ \begin{Arabic}  جمع\_سالم \end{Arabic}}}
 \storeglosentry{external masculine plural}{name={External masculine plural}, description={ \begin{Arabic} جمع\_مذكر\_السالم  \end{Arabic}}}
 \storeglosentry{external feminine plural}{name={External feminine plural}, description={ \begin{Arabic} جمع\_مؤنث\_السالم  \end{Arabic}}}
@@ -106,4 +107,13 @@
 \storeglosentry{surah keys}{name={Surah keys}, description={ \begin{Arabic}  مفاتيح\_السّورة \end{Arabic}}}
 \storeglosentry{lemma}{name={Lemma}, description={ \begin{Arabic}  جذع\_الكلمة \end{Arabic}}}
 \storeglosentry{root}{name={Root}, description={ \begin{Arabic} جذر\_الكلمة  \end{Arabic}}}
+\storeglosentry{subject}{name={Subject}, description={ \begin{Arabic} فاعل  \end{Arabic}}}
+\storeglosentry{object}{name={Object}, description={ \begin{Arabic} مفعول   \end{Arabic}}}
+\storeglosentry{passive voice}{name={Passive voice}, description={ \begin{Arabic} صيغة\_مبني\_للمجهول  \end{Arabic}}}
+\storeglosentry{active voice}{name={Active voice}, description={ \begin{Arabic} صيغة\_مبني\_للمعلوم    \end{Arabic}}}
+\storeglosentry{superlative noun}{name={Superlative noun}, description={ \begin{Arabic} اسم\_تفضيل  \end{Arabic}}}
+
+
+
+
 
